<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.projectkorra</groupId>
    <artifactId>projectkorrarpg</artifactId>
    <version>2.0.0</version>
    <packaging>jar</packaging>
    <name>ProjectKorraRPG</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
    </repositories>
    <dependencies>
        <!--Bukkit API-->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.21.11-R0.2-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- ProjectKorra Core -->
        <dependency>
            <groupId>com.projectkorra</groupId>
            <artifactId>projectkorra</artifactId>
            <version>1.12.0</version>
            <scope>provided</scope>
        </dependency>
        <!-- Apache Commons Lang 3 -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.18.0</version>
            <scope>provided</scope>
        </dependency>
        <!-- Inventory Framework -->
        <dependency>
            <groupId>com.github.stefvanschie.inventoryframework</groupId>
            <artifactId>IF</artifactId>
            <version>0.11.0</version>
        </dependency>
    </dependencies>

    <build>
        <defaultGoal>clean package install</defaultGoal>
        <finalName>${project.name}-${project.version}</finalName>
        <resources>
            <resource>
                <targetPath>.</targetPath>
                <filtering>true</filtering>
                <directory>${project.basedir}/src/main/resources</directory>
                <includes>
                    <include>*.yml</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>21</release>
                </configuration>
            </plugin>
	        <plugin>
                <groupId>org.apache.maven.plugins</groupId>
	            <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                    <relocations>
                        <relocation>
                            <pattern>com.github.stefvanschie.inventoryframework</pattern>
                            <shadedPattern>com.projectkorra.rpg.inventoryframework</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>
		        <executions>
		            <execution>
		                <phase>package</phase>
			            <goals>
			                <goal>shade</goal>
			            </goals>
		            </execution>
		        </executions>
	        </plugin>
        </plugins>
    </build>
</project>